# Hackathon_2-Todo-cli

./: README.md  main.py  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-todo-cli-app/: 1-create-impl-plan.plan.prompt.md  1-create-task-list.tasks.prompt.md  1-create-todo-cli-spec.spec.prompt.md  1-implement-todo-app.implementation.prompt.md  2-test-main-file.implementation.prompt.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
specs/001-todo-cli-app/contracts/: cli-interface.md
src/todo_app/: __init__.py
src/todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/todo_app/cli/: main.py
src/todo_app/models/: task.py
src/todo_app/services/: task_manager.py
src/todo_app/utils/: formatters.py  validators.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/models/: test_task.py
tests/unit/services/: test_task_manager.py
